tests/recursions/ill-typed/bad-general-recursion.saul
language core;

fn swap(p : Bool) -> Bool {
  return if p then swap(true) else succ(0)
}

fn main(x : Bool) -> Bool {
  return swap(x)
}
